# smart-study-planner

./: .env  Cargo.toml  Dockerfile
frontend/smart-study-planner-frontend/: Dockerfile  package.json  tailwind.config.js  vite.config.js
frontend/smart-study-planner-frontend/src/: App.jsx  api.js  main.jsx
frontend/smart-study-planner-frontend/src/components/: LoadingSpinner.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/smart-study-planner-frontend/src/context/: AuthContext.jsx
frontend/smart-study-planner-frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
migrations/: 20241001000115_setup_database.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
