[package]
name = "smart-study-planner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
] }
dotenv = "0.15"
tower = { version = "0.4" }
tower-http = { version = "0.3", features = ["cors", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.89"
thiserror = "1.0.64"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bcrypt = "0.14"
jsonwebtoken = "8.2"
validator = { version = "0.16", features = ["derive"] }
